z-index fix on sidebar

--- a/src/components/Sidebar/index.css
+++ b/src/components/Sidebar/index.css
@@ -73,6 +73,7 @@
 @media only screen and (max-width: 640px) {
 	.Sidebar {
 		display: none;
+		z-index: 5;
 	}
 
 	.Sidebar .Header .MobileHeader {
